# fantastic-train-monitor

./: .gitmodules  CMakeLists.txt
Inc/: input.hpp  routines.hpp
Src/: input.cpp  main.cpp  routines.cpp
